📁🎫 Updated with Glitch

--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a class="active" href="aboutme.html">About Me</a></li>
-      <li><a href="art.html">Art</a></li>
+      <li><a href="art.html">Music</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li style="float: right">
         <a target="_blank" href=""
@@ -53,36 +53,22 @@
     <div class="parent-flex">
       <div class="child-flex">
         <img
-          src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/Untitled100.png?v=1746635377571"
+      
         />
       </div>
       <div class="child-flex">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-          faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-          pretium tellus duis convallis. Tempus leo eu aenean sed diam urna
-          tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas.
-          Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut
-          hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent
-          per conubia nostra inceptos himenaeos.
+                  hi Im Andrew Carrington / dot andre. im am a brooklyn based artist who has been making music since 10 years. I love making beats and rapping.
+          Ive been acting since 12 years old and been casted for a who bunch of shows. I like bike riding watching tv and hanging out with my friends. My music in based on anything as long as you can have proper feeling from it. 
         </p>
       </div>
     </div>
     <div class="parent-flex">
       <div class="child-flex">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-          faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-          pretium tellus duis convallis. Tempus leo eu aenean sed diam urna
-          tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas.
-          Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut
-          hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent
-          per conubia nostra inceptos himenaeos.
-        </p>
+       
       </div>
       <div class="child-flex">
-        <img
-          src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/Untitled100.png?v=1746635377571"
+       <img src= "https://cdn.glitch.global/c085c78f-0f8f-4f52-80ff-83d233d274df/Screenshot%202025-06-11%20at%206.51.18%E2%80%AFPM.png?v=1749682285158" "width =600"
         />
       </div>
     </div>
