--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,13 @@
     <title>Final Project</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <style>
+       {
+        background-color: blue;
+      }
+      img {
+        display: block;
+        margin: auto;
+      }
       /* Styling Only Related To THIS Page */
     </style>
   </head>
@@ -32,6 +39,7 @@
     </ul>
     <!-- ⬇⬇⬇⬇⬇⬇ Main Page Content -->
     <h1>Resume</h1>
-
+     <img src=
+    "https://cdn.glitch.global/c085c78f-0f8f-4f52-80ff-83d233d274df/Screenshot%202025-06-08%20at%208.38.44%E2%80%AFPM.png?v=1749429531375"width="900";
   </body>
 </html>
