--- a/index.html
+++ b/index.html
@@ -20,41 +20,47 @@ Select ONE Additional Feature to Add
     <title>Final Project</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <style>
-      /* Styling Only Related To THIS Page */
-      /*~~~~~ Taken From:
-      https://www.w3schools.com/howto/howto_css_parallax.asp*/
-      .parallax {
-        /* The image used */
-        background-image: url("https://cdn.glitch.global/66249578-345e-4e9c-8fac-cabe98f682e4/image0.jpeg?v=1747657278943");
+            /* Styling Only Related To THIS Page */
+            /*~~~~~ Taken From:
+            https://www.w3schools.com/howto/howto_css_parallax.asp*/
+            .parallax {
+              /* The image used */
+              background-image: url("https://cdn.glitch.global/c085c78f-0f8f-4f52-80ff-83d233d274df/b9d4b34a-3061-462f-aca6-53658cbf33a7.Screenshot%202024-09-13%20at%2011.28.22%20PM.png?v=1749429977947https://cdn.glitch.global/c085c78f-0f8f-4f52-80ff-83d233d274df/Photo%20on%2012-2-22%20at%2011.25%20AM%20%232.jpg?v=1749420166664");
 
-        /* Set a specific height */
-        min-height: 500px;
+              /* Set a specific height */
+              min-height: 500px;
 
-        /* Create the parallax scrolling effect */
-        background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
-      .textblock {
-        min-height: 500px;
-        background-color: black;
-        color: white;
-      }
-      .parent-flex {
-        display: flex;
-      }
-      .child-flex {
-        background-color: green;
-        margin: 30px;
-        padding: 10px;
-        text-align: justify;
-        width: 40%;
-      }
-      .para-1{
-        display: flex;
-        align-items: center;
-      }
+              /* Create the parallax scrolling effect */
+              background-attachment: fixed;
+              background-position: center;
+              background-repeat: no-repeat;
+              background-size: cover;
+            }
+
+            {<link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Hand+Pre:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Wet+Paint&display=swap" rel="stylesheet">}
+            .textblock {
+              min-height: 500px;
+              background-color: lightblue;
+              color: white;
+            }
+            .parent-flex {
+              display: flex;
+
+            }
+            .child-flex {
+              background-color: orange;
+              margin: 40px;
+              padding: 300px;
+              text-align: auto;
+              width: 40%;
+            }
+            .para-1{
+              display: flex;
+              align-items: center;
+                 text-color:black;
+            }
     </style>
   </head>
   <body>
@@ -62,7 +68,7 @@ Select ONE Additional Feature to Add
     <ul class="nav">
       <li><a class="active" href="index.html">Home</a></li>
       <li><a href="aboutme.html">About Me</a></li>
-      <li><a href="art.html">Art</a></li>
+      <li><a href="art.html">Music</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li style="float: right">
         <a target="_blank" href=""
@@ -81,31 +87,15 @@ Select ONE Additional Feature to Add
     </ul>
 
     <!-- ⬇⬇⬇⬇⬇⬇ Main Page Content -->
-    <h1>Ms. Hall | Web Dev 2024-2025</h1>
+    <h1>Andrew Carrington</h1>
     <div class="parallax"></div>
 
     <div class="textblock parent-flex">
       <div class="child-flex para-1">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-          faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-          pretium tellus duis convallis. Tempus leo eu aenean sed diam urna
-          tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas.
-          Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut
-          hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent
-          per conubia nostra inceptos himenaeos.
-        </p>
+         <p>follow all the sosical media in music tab <br> stay tuned for more content</p>
       </div>
-      <div class="child-flex">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-          faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-          pretium tellus duis convallis. Tempus leo eu aenean sed diam urna
-          tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas.
-          Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut
-          hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent
-          per conubia nostra inceptos himenaeos.
-        </p>
+      <div class="">
+       
       </div>
     </div>
   </body>
