🦋🏕️ Updated with Glitch

--- a/art.html
+++ b/art.html
@@ -15,7 +15,7 @@
         
       }
       
-      {background-color:red }
+      {page-color:orange }
 
       .parent-flex img {
         max-width: 30%;
@@ -48,7 +48,9 @@
     </ul>
     <!-- ⬇⬇⬇⬇⬇⬇ Main Page Content -->
     <h1>My music</h1>
-
+<p>
+  Best used on a non-DOE device
+    </p>
     <a href="https://www.tiktok.com/@dootandre"> "My Tik-tok " </a> <br>
     <a href="https://www.instagram.com/thereal_dotandre/p/DGCRfMKucXC/"> "My Tik-tok " </a><br>
     <a href="https://youtube.com/@anomist3794?si=bY0wROPqlj1hpzkV"> "My Tik-tok " </a>
