--- a/art.html
+++ b/art.html
@@ -20,11 +20,14 @@
       .parent-flex img {
         max-width: 30%;
         border-radius: 10px;
+        
       }
     </style>
   </head>
   <body>
     <!-- ⬆⬆⬆⬆ Nav Bar -->
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6oHVJvWpAVlGgFKrtBeogD?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="aboutme.html">About Me</a></li>
